카테고리 수정 기능 구현

--- a/src/page/main.css
+++ b/src/page/main.css
@@ -1,3 +1,12 @@
+/* 기본 설정 */
+* {
+  margin: 0;
+  padding: 0;
+}
+button {
+  cursor: pointer;
+}
+
 /* 메인 구역 */
 .main {
   display: flex;
@@ -197,9 +206,14 @@
   width: 20px;
   border: none;
   background-color: transparent;
-  margin-right: 5px;
-  cursor: pointer;
 }
 .input-edit {
   width: 70%;
+  margin: 0 5px;
+}
+.modify-btn {
+  position: relative;
+  width: 20px;
+  border: none;
+  background-color: transparent;
 }
