--- a/src/page/main.css
+++ b/src/page/main.css
@@ -24,30 +24,32 @@ button {
   flex-basis: 20%;
 }
 /* center section */
+
+/* 글쓰기 페이지 */
 .write {
   padding: 20px;
   padding-left: 30px;
 }
-.write div {
+.write #title {
   margin: 30px 0 0 0;
 }
 #title input {
-  width: 91%;
-  padding-bottom: 20px;
+  width: 99%;
+  padding-bottom: 10px;
   border: none;
   font-size: 22px;
   border-bottom: solid 1px #ababab;
   font-weight: bold;
   font-family: Arial, Helvetica, sans-serif;
 }
-
-#contents textarea {
-  width: 91%;
+#contents {
+  width: 99%;
   resize: none;
   border: none;
-  height: 300px;
+  height: 400px;
   font-size: 15px;
   font-family: Arial, Helvetica, sans-serif;
+  margin-top: 10px;
 }
 #title input:focus,
 #contents textarea:focus {
