--- a/src/page/main.css
+++ b/src/page/main.css
@@ -24,7 +24,23 @@ button {
   flex-basis: 20%;
 }
 /* center section */
-
+/* 헤더 */
+.header {
+  display: flex;
+  justify-content: space-between;
+}
+.login-list {
+  list-style: none;
+  padding: 20px;
+}
+.logo {
+  padding: 20px;
+}
+.login-list li {
+  margin-bottom: 5px;
+  font-weight: bold;
+  font-size: 14px;
+}
 /* 글쓰기 페이지 */
 .write {
   padding: 20px;
