--- a/src/page/main.css
+++ b/src/page/main.css
@@ -235,7 +235,16 @@ button {
   border: none;
   background-color: transparent;
 }
-
+/* 로그인 */
+.login-div {
+  padding: 20px;
+}
+.search-user-info {
+  display: flex;
+  padding: 10px;
+  justify-content: space-around;
+  border-top: 1px solid #ababab;
+}
 /* 회원가입 */
 .signup {
   display: flex;
