--- a/src/page/main.css
+++ b/src/page/main.css
@@ -245,6 +245,21 @@ button {
   justify-content: space-around;
   border-top: 1px solid #ababab;
 }
+.back-and-close {
+  border-bottom: 1px solid #ababab;
+  display: flex;
+  justify-content: space-between;
+  padding: 10px 15px;
+}
+.back-and-close div {
+  width: 20px;
+  height: 20px;
+  cursor: pointer;
+}
+.back-and-close img {
+  width: 100%;
+  height: 100%;
+}
 /* 회원가입 */
 .signup {
   display: flex;
