--- a/src/page/main.css
+++ b/src/page/main.css
@@ -260,6 +260,56 @@ button {
   width: 100%;
   height: 100%;
 }
+.search-box {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding: 20px;
+}
+.search-box div {
+  margin-top: 15px;
+  text-align: center;
+}
+.search-box div input[name='search-id-name'] {
+  width: 140px;
+}
+.search-box div input[name='search-id-bday'] {
+  width: 80px;
+}
+.search-box div input[name='search-id-sex'] {
+  width: 10px;
+}
+.search-box div input[name='search-id-email'] {
+  width: 135px;
+}
+.search-box div input[name='search-id-write-email'] {
+  width: 100px;
+}
+.search-box div input[name='search-id-submit'],
+.search-id-result div input[name='search-id-back'] {
+  margin-top: 20px;
+  border: 1px solid #ababab;
+  border-radius: 4px;
+  cursor: pointer;
+  padding: 5px;
+  font-weight: 700;
+}
+.result-box {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding: 20px;
+}
+.result-box div {
+  margin-top: 15px;
+  text-align: center;
+}
+.search-id-result-div {
+  border: 1px solid #ababab;
+}
+.search-id-result-div div {
+  margin: 10px;
+}
 /* 회원가입 */
 .signup {
   display: flex;
