게시물 작성시 카테고리 적용 구현

--- a/src/page/main.css
+++ b/src/page/main.css
@@ -84,6 +84,14 @@ button {
   cursor: pointer;
   background-color: white;
 }
+.select-category-box {
+  margin: 30px;
+  text-align: center;
+}
+.select-category {
+  padding: 4px;
+  margin-top: 5px;
+}
 
 /* 게시판 리스트 */
 .list {
