--- a/src/page/main.css
+++ b/src/page/main.css
@@ -175,53 +175,95 @@ button {
 }
 
 /* 게시판 상세페이지 */
+.view {
+  height: 500px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
+.title-box {
+  border-bottom: 1px solid #ababab;
+  flex-basis: 20%;
+}
 .date-box {
   text-align: right;
   font-size: 13px;
   color: #ababab;
   margin: 0 10px 10px 0;
 }
-.top-title #title-txt {
+.title-box #title-txt {
   border: none;
   padding-bottom: 0px;
+  width: 100%;
 }
-.top-title {
-  border-bottom: 1px solid #ababab;
+
+.write-option-box {
+  display: flex;
+  justify-content: end;
+}
+.write-option-box input,
+#view-list-btn {
+  align-items: flex-end;
+  margin-right: 10px;
+  border: 1px solid #ababab;
+  border-radius: 4px;
+  cursor: pointer;
+  padding: 5px;
+  font-weight: 700;
+  height: 30px;
+  width: 40px;
+}
+.contents-box {
+  display: flex;
+  flex-basis: 55%;
+  flex-direction: column;
+  justify-content: space-between;
 }
 #content-txt {
   border: none;
 }
-.other-div {
+.other-box {
   display: flex;
-  margin-top: 300px;
   border-top: 1px solid #ababab;
   justify-content: space-around;
+  flex-basis: 25%;
 }
-.other-div .like {
-  margin-top: 20px;
+.other-box .like {
+  margin-top: 40px;
 }
-.other-div .like img {
+.other-box .like img {
   width: 40px;
   cursor: pointer;
+  margin-left: 5px;
 }
-.other-div .like h5 {
+.other-box .like h5 {
   margin-top: 5px;
+}
+.other-box p {
+  text-align: center;
 }
 .pre-btn,
 .next-btn {
   cursor: pointer;
   text-align: center;
   font-size: 25px;
+  height: 28px;
 }
+
 .pre-btn:hover,
 .next-btn:hover {
   font-size: 28px;
 }
-.pre-view p,
-.next-view p {
+.pre-view,
+.next-view {
   font-size: 13px;
-  color: #ababab;
   margin-top: 20px;
+  flex-basis: 30%;
+}
+.pre-title,
+.next-title {
+  margin-top: 10px;
+  color: #ababab;
 }
 
 /* left - 카테고리 메뉴 */
