댓글 데이터 db에 추가

--- a/src/page/main.css
+++ b/src/page/main.css
@@ -34,7 +34,8 @@ button {
   padding: 20px;
 }
 .logo {
-  padding: 20px;
+  margin: 20px;
+  cursor: pointer;
 }
 .login-list li {
   margin-bottom: 5px;
