--- a/src/App.css
+++ b/src/App.css
@@ -88,11 +88,11 @@
   cursor: pointer;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+/* 지도 */
+.map-close-btn {
+  color: white;
+  text-align: end;
+  font-size: 20px;
+  margin: 5px;
+  cursor: pointer;
 }
