--- a/src/inc/map.css
+++ b/src/inc/map.css
@@ -6,3 +6,18 @@
   width: 400px;
   height: 400px;
 }
+.pickupMap + #addMarkerBtn {
+  width: 110px;
+  height: 35px;
+  position: absolute;
+  top: 8px;
+  left: 8px;
+  padding: 7px 12px;
+  font-size: 14px;
+  border: 1px solid #dbdbdb;
+  background-color: #fff;
+  border-radius: 2px;
+  box-shadow: 0 1px 1px rgba(0, 0, 0, 0.04);
+  z-index: 1;
+  cursor: pointer;
+}
