배달비 부담 유무 기능 분할, 배달비 칼럼 추가

--- a/src/inc/map.css
+++ b/src/inc/map.css
@@ -21,3 +21,11 @@
   z-index: 1;
   cursor: pointer;
 }
+.settingMap + #addMarkerBtn {
+  width: 10px;
+  height: 10px;
+  position: absolute;
+  top: 8px;
+  left: 8px;
+  visibility: hidden;
+}
