css 모음 폴더 생성 및 기능 별 분할

--- a/src/css/map.css
+++ b/src/css/map.css
@@ -29,3 +29,11 @@
   left: 8px;
   visibility: hidden;
 }
+/* 지도 */
+.map-close-btn {
+  color: white;
+  text-align: end;
+  font-size: 20px;
+  margin: 5px;
+  cursor: pointer;
+}
