--- a/src/css/view.css
+++ b/src/css/view.css
@@ -1,154 +1,9 @@
-/* 게시판 상세페이지 */
-.view {
-  min-width: 350px;
-  min-height: 560px;
-}
-.view-box {
-  display: flex;
-  flex-direction: column;
-  justify-content: space-between;
-}
-.title-box {
-  border-bottom: 1px solid #ababab;
-  flex-basis: 15%;
-  padding: 10px;
-}
-#title-txt {
-  font-weight: 700;
-  font-size: 16px;
-}
-.board-info-box {
-  display: flex;
-  justify-content: space-between;
-  margin-top: 10px;
-}
-.board-info-box .user-info {
-  display: flex;
-}
-.board-info-box .nick-img {
-  width: 18px;
-  height: 18px;
-  border-radius: 50%;
-  border: 1px solid black;
-  margin-right: 6px;
-}
-.board-info-box .user-nickname {
-  font-size: 13px;
-}
-.board-info {
-  display: flex;
-  font-size: 13px;
-  color: #ababab;
-}
-.board-info div {
-  margin-left: 10px;
-}
-.title-box #title-txt {
-  border: none;
-  padding-bottom: 0px;
-  width: 100%;
-}
-
-.write-option-box {
-  display: flex;
-  justify-content: end;
-}
-.write-option-box input,
-#view-list-btn {
-  align-items: flex-end;
-  margin-right: 10px;
-  border: 1px solid #ababab;
-  border-radius: 4px;
-  cursor: pointer;
-  padding: 5px;
-  font-weight: 600;
-  height: 30px;
-  width: 40px;
-}
-.contents-box {
-  padding: 10px;
-  min-height: 50px;
-}
-#content-txt {
-  border: none;
-  font-size: 13px;
-}
-.join-box {
-  padding: 10px;
-  display: flex;
-  flex-direction: column;
-  justify-content: flex-end;
-  min-height: 90px;
-  align-items: center;
-}
-.join-box .join img {
-  width: 30px;
-  cursor: pointer;
-  margin-left: 10px;
-}
-.join-box .join h5 {
-  margin-top: 5px;
-}
-.setting-box {
-  display: flex;
-  flex-direction: column;
-}
-.pickup-map {
-  width: 90px;
-  height: 30px;
-  cursor: pointer;
-  border: none;
-  background-color: coral;
-  color: beige;
-  font-weight: 500;
-  font-size: 13px;
-  border-radius: 5px;
-  margin-left: 50vw;
-}
-/* 나머지 구역 */
-.other-box {
-  display: flex;
-  border-top: 1px solid #ababab;
-  justify-content: space-between;
-  flex-basis: 20%;
-  padding: 10px;
-}
-.pre-view,
-.next-view {
-  font-size: 13px;
-  flex-basis: 30%;
-}
-.other-box #join-list-box {
-  margin: auto;
-  margin-top: 30px;
-}
-.other-box p {
-  text-align: center;
-}
-.pre-btn,
-.next-btn {
-  cursor: pointer;
-  text-align: center;
-  font-size: 25px;
-  height: 28px;
-}
-.pre-btn:hover,
-.next-btn:hover {
-  font-size: 28px;
-}
-.pre-title,
-.next-title {
-  min-width: 115px;
-  margin-top: 10px;
-  color: #ababab;
-  text-align: center;
-}
 /* 댓글 */
 .reply-box {
   border-top: 1px solid #ababab;
   display: flex;
   flex-direction: column;
-  flex-basis: 15%;
+  /* flex-basis: 15%; */
   padding: 15px;
 }
 .reply-value {
